# cross-notifier

./: .dockerignore  .gitignore  CLAUDE.md  CURRENT_TASK.md  Cargo.toml  Dockerfile  Icon.icns  PLAN-notification-center.md  README.md  TODO.md  action.go  action_test.go  app_darwin.go  autostart_darwin.go  autostart_linux.go  autostart_other.go  autostart_windows.go  build-macos.sh  center.go  center_renderer.go  client.go  client_test.go  config.go  config_test.go  font.go  go.mod  go.sum  icon.go  icon_test.go  install.sh  justfile  logo.kra  main.go  message.go  notification_card.go  notification_test.go  render.go  render_notifications.go  server.go  server_test.go  (+13 more)
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
calendar/: Cargo.toml
calendar/examples/: dump_caldav.rs  fetch_caldav.rs
calendar/src/: lib.rs  parse.rs  router.rs  scheduler.rs  service.rs  source.rs  store.rs
cmd/server/: main.go
core/: Cargo.toml
core/src/: action.rs  device.rs  icon.rs  lib.rs  openapi.rs  openapi.yaml  protocol.rs  router.rs  state.rs
core/src/push/: apns.rs  mock.rs
core/tests/: long_polling.rs
crates/calendar/examples/: fetch_caldav.rs
crates/calendar/src/: lib.rs  notifier.rs  parse.rs  router.rs  scheduler.rs  service.rs  source.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: alertmanager.rs  device.rs  icon.rs  lib.rs  openapi.yaml  protocol.rs  router.rs  state.rs  subscriber.rs
crates/core/src/push/: apns.rs  mock.rs  mod.rs
crates/core/tests/: long_polling.rs
daemon/: Cargo.toml
daemon/src/: app.rs  autostart.rs  card.rs  center.rs  client.rs  config.rs  font.rs  gpu.rs  icon.rs  main.rs  notification.rs  protocol.rs  renderer.rs  rules.rs  server.rs  settings.rs  sound.rs  store.rs  tray.rs
ios/: README.md  project.yml
ios/CrossNotifier/: AppDelegate.swift  CrossNotifier.entitlements  CrossNotifierApp.swift  Info.plist
ios/CrossNotifier/Models/: DeviceToken.swift  Keychain.swift  ServerConfig.swift
ios/CrossNotifier/Networking/: CrossNotifierClient.swift
ios/CrossNotifier/Push/: PushManager.swift
ios/CrossNotifier/Views/: ContentView.swift  SettingsView.swift
ios/CrossNotifierServiceExtension/: CrossNotifierServiceExtension.entitlements  Info.plist  NotificationService.swift
ios/CrossNotifierTests/: ClientErrorTests.swift  DeviceTokenTests.swift  ServerConfigTests.swift
server/: Cargo.toml
server/src/: main.rs
