[workspace]
resolver = "2"
members = ["crates/core", "crates/calendar", "bin/server", "bin/daemon"]

[workspace.package]
version = "0.11.1"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

image = "0.25"
base64 = "0.22"

thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Calendar crate deps
icalendar = "0.17"
rrule = "0.14"
quick-xml = "0.37"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
