[package]
name = "cross-notifier-calendar"
version.workspace = true
edition.workspace = true

[lib]
name = "cross_notifier_calendar"
path = "src/lib.rs"

[dependencies]
cross-notifier-core = { path = "../core" }

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
reqwest = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
icalendar = { workspace = true }
rrule = { workspace = true }
quick-xml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy = { workspace = true }
tower = { workspace = true }

[[example]]
name = "fetch_caldav"
path = "examples/fetch_caldav.rs"

[[example]]
name = "dump_caldav"
path = "examples/dump_caldav.rs"
