[package]
name = "cross-notifier-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

image = { workspace = true }
base64 = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }

# APNS push notifications
jsonwebtoken = "9"

[features]
# Exposes the in-process APNS mock server so downstream integration
# tests can drive it. Not needed for unit tests within this crate.
test-util = []

[dev-dependencies]
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
http = "1"
http-body-util = "0.1"
tempfile = "3"
